--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@
  * limitations under the License.
  */
 
-group 'me.ntrrgc'
-version '1.1.3'
+group  "com.github.taktik"
+version '1.2.2'
 
 buildscript {
     ext.kotlin_version = '1.4.31'
@@ -23,9 +23,18 @@ buildscript {
     ext.junit_version = '1.7.1'
 
     repositories {
+        mavenLocal()
         mavenCentral()
+        maven {
+            credentials {
+                username repoUsername
+                password repoPassword
+            }
+            url mavenRepository
+        }
     }
     dependencies {
+        classpath "com.taktik.gradle:gradle-plugin-maven-repository:1.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.2.0'
     }
@@ -67,3 +76,19 @@ dependencies {
     testRuntime "org.junit.platform:junit-platform-launcher:$junit_version"
     testCompile "com.google.code.findbugs:jsr305:3.0.1"
 }
+
+apply plugin: 'maven-repository'
+apply plugin: 'maven-publish'
+
+publishing {
+    repositories {
+        maven {
+            url "https://maven.taktik.be/content/groups/public/"
+            credentials {
+                username repoUsername
+                password repoPassword
+            }
+        }
+    }
+}
+
