--- a/build.gradle
+++ b/build.gradle
@@ -47,18 +47,17 @@ repositories {
     mavenCentral()
 }
 
-// Temporarily disable tests
-sourceSets {
-    test {
-        java.srcDirs = []
-        kotlin.srcDirs = []
-    }
+
+test {
+    useJUnitPlatform()
 }
+
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    testImplementation 'io.kotest:kotest-runner-junit5:5.7.2'
 }
 
 
